fix: video list scrollbar

--- a/src/components/VideoList/videoList.module.scss
+++ b/src/components/VideoList/videoList.module.scss
@@ -20,13 +20,11 @@
 }
 
 .video-list {
-  height: calc(100% - 100px);
   width: 100%;
   display: flex;
   gap: 10px;
   align-items: center;
   flex-direction: column;
-  overflow: auto;
 
   & .video-item {
     cursor: pointer;
